fix: save message when edited.
